2012-06-25  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: changed default behavior when the input data doesn't match any known input.

2011-10-09  Jeremy Cribb <jcribb@email.unc.edu>
	* filter_video_tracking.m:  implemented 'dead_spots' and 'remove_drift' filters.
	* load_video_tracking.m:  fixed bug where an empty 'first file' in a list would abandon any data loaded from subsequent files in the list.
	* remove_drift.m:  fixed bug where large empty periods in a movie would corrupt the fitting parameters.  Fixed by reducing the complexity of the algorithm.  It doesn't generalize to any drift function anymore, it patently assumes a linear drift (constant velocity).

2011-09-27  Jeremy Cribb <jcribb@email.unc.edu>
	* filter_video_tracking.m:  fixed the default values for all filters to reflect conditions such that each filter was not run at all.  

2011-09-08  Jeremy Cribb <jcribb@email.unc.edu>
	* convert_vidtable_to_beadstruct.m:  added.  converts a load_video_tracking 'table' type output to a bead struct array that other folks find useful (same format as that outputted by "export all beads" functionality in evt_GUI.

2011-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* filter_video_tracking.m:  fixed bug where length scales weren't converted properly for the cropXY filter type.
	* load_video_tracking.m:   updated documentation.
	
2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* SetFPSandMinFrames.m:  added scaling parameter.

2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m:  added logentries for empty files.  Handles empty cases better.

2011-07-21  Jeremy Cribb <jcribb@email.unc.edu>
	* load_video_tracking.m: can now input a vector as the calibum parameter for converting pixels to microns.  An error is thrown if the number of input files does not equal the number of calibum values.  If one calibum value is used, it becomes tiled for all input files (it assumes every file uses same calibration value).
