@@ -1,3 +1,6 @@
+2012-12-10  Jeremy Cribb <jcribb@email.unc.edu>
+	* load_video_tracking.m: when a file is empty the function now returns a non-fatal error message along with an empty tracking dataset.
+
 2012-06-25  Jeremy Cribb <jcribb@email.unc.edu>
 	* load_video_tracking.m: changed default behavior when the input data doesn't match any known input.
 
